update Status Bar
Foi configurado o status bar

--- a/app.json
+++ b/app.json
@@ -8,6 +8,9 @@
       "ios",
       "android"
     ],
+    "androidStatusBar": {
+      "backgroundColor": "#4b66ea"
+    },
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
