--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
       "android"
     ],
     "androidStatusBar": {
-      "backgroundColor": "#4b66ea"
+      "backgroundColor": "#B9C941"
     },
     "version": "1.0.0",
     "orientation": "portrait",
